# ps5-fw-spoof

./: .clang-format  .gitignore  CMakeLists.txt
.github/: README.md
.github/workflows/: payload.yml
source/: main.c
